// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en el <SearchScreen /> Debe mostrar a Batman e input con el valor del queryString 1`] = `
<div>
  <h1>
     Search screen
  </h1>
  <hr />
  <div
    className="row"
  >
    <div
      className="col-5 "
    >
      <h4>
         Search form
      </h4>
      <hr />
      <form
        className="d-grid gap-2 "
        onSubmit={[Function]}
      >
        <input
          autoComplete="off"
          className="form-control d-grid gap-2"
          name="searchText"
          onChange={[Function]}
          placeholder="Find your hero"
          type="text"
          value="batman"
        />
        <button
          className="btn m-2 btn-outline-primary"
          type="submit"
        >
          Seach...
        </button>
      </form>
    </div>
    <div
      className="col-7"
    >
      <h4>
         Results 
      </h4>
      <hr />
      <a
        className="my-card"
        href="/hero/dc-batman"
        onClick={[Function]}
      >
        <img
          alt="Batman"
          className="img img-responsive"
          src="./assets/heroes/dc-batman.jpg"
        />
        <div
          className="profile-name"
        >
          Batman
        </div>
        <div
          className="profile-position"
        >
          Bruce Wayne
        </div>
        <div
          className="profile-overview"
        >
          <div
            className="profile-overview"
          >
            <div
              className="row"
            >
              <div
                className="col-ms-4"
              >
                <h3>
                  DC Comics
                </h3>
                <p>
                  Primera aparición: 
                  <br />
                  Detective Comics #27
                </p>
              </div>
            </div>
          </div>
        </div>
      </a>
    </div>
  </div>
</div>
`;

exports[`Pruebas en el <SearchScreen /> Debe mostrarse correctamente con valores por defecto 1`] = `
<div>
  <h1>
     Search screen
  </h1>
  <hr />
  <div
    className="row"
  >
    <div
      className="col-5 "
    >
      <h4>
         Search form
      </h4>
      <hr />
      <form
        className="d-grid gap-2 "
        onSubmit={[Function]}
      >
        <input
          autoComplete="off"
          className="form-control d-grid gap-2"
          name="searchText"
          onChange={[Function]}
          placeholder="Find your hero"
          type="text"
          value=""
        />
        <button
          className="btn m-2 btn-outline-primary"
          type="submit"
        >
          Seach...
        </button>
      </form>
    </div>
    <div
      className="col-7"
    >
      <h4>
         Results 
      </h4>
      <hr />
      <div
        className="alert alert-info"
      >
        Search a hero
      </div>
    </div>
  </div>
</div>
`;
